--- a/Shikhai/Views/Home/Index.cshtml
+++ b/Shikhai/Views/Home/Index.cshtml
@@ -21,6 +21,8 @@
 </style>
 
 
+<link href="~/Content/jquery-ui.css" rel="stylesheet" />
+
 @*Banner*@
 <div class="index-page">
     <div class="">
@@ -31,28 +33,28 @@
 @*Portfolio*@
 <div class="portfolio-content portfolio-4">
     <div id="js-filters-full-width" class="cbp-l-filters-alignCenter">
-        <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">
-            ALL
-            <div class="cbp-filter-counter"></div>
-        </div> /
+        @*<div data-filter="*" class="cbp-filter-item-active cbp-filter-item">
+                ALL
+                <div class="cbp-filter-counter"></div>
+            </div> /*@
         <div data-filter=".identity" class="cbp-filter-item">
-            IDENTITY
+            Popular
             <div class="cbp-filter-counter"></div>
         </div> /
         <div data-filter=".web-design" class="cbp-filter-item">
-            WEB DESIGN
+            Academic Tutoring
             <div class="cbp-filter-counter"></div>
         </div> /
         <div data-filter=".graphic" class="cbp-filter-item">
-            GRAPHIC
+            Language
             <div class="cbp-filter-counter"></div>
         </div> /
         <div data-filter=".logos" class="cbp-filter-item">
-            LOGO
+            Music
             <div class="cbp-filter-counter"></div>
         </div> /
         <div data-filter=".motion" class="cbp-filter-item">
-            MOTION
+            Performing Arts
             <div class="cbp-filter-counter"></div>
         </div>
     </div>
@@ -147,7 +149,7 @@
                 </div>
             </a>
         </div>
-     
+
         <div class="cbp-item web-design graphic">
             <a href="~/Content/assets/global/img/portfolio/1200x900/4.jpg" class="cbp-caption cbp-lightbox" data-title="Events and  More<br>by Tiberiu Neamu">
                 <div class="cbp-caption-defaultWrap">
@@ -209,7 +211,7 @@
                 </div>
             </a>
         </div>
-      
+
         <div class="cbp-item graphic logos">
             <a href="~/Content/assets/global/img/portfolio/1200x900/07.jpg" class="cbp-caption cbp-lightbox" data-title="Seemple* Music for iPad<br>by Tiberiu Neamu">
                 <div class="cbp-caption-defaultWrap">
@@ -241,11 +243,151 @@
             </a>
         </div>
     </div>
-    <div id="js-loadMore-full-width" class="cbp-l-loadMore-text">
-        <a href="../assets/global/plugins/cubeportfolio/ajax/loadMore4.html" class="cbp-l-loadMore-link btn" rel="nofollow">
-            <span class="cbp-l-loadMore-defaultText">LOAD MORE</span>
-            <span class="cbp-l-loadMore-loadingText">LOADING...</span>
-            <span class="cbp-l-loadMore-noMoreLoading">NO MORE WORKS</span>
-        </a>
-    </div>
+
 </div>
+
+<section id="HowItWorks" class="Landing Grain" style="text-align:center; background-color:#f5f5f5;">
+    <div class="PageDesc">
+        <h3 class="LightWeight Large">How it Works</h3>
+        <h4 class="LightWeight ExtraSmall">
+            From finding the perfect teacher to managing payments, scheduling
+            and tracking your progress, we take care of all the details, so you can focus on learning.
+            <a href="/students/how-it-works">Learn More</a>
+        </h4>
+    </div>
+
+    <div class="Container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-6">
+                    <div class="ImageColumn Search">
+                        <div class="Image FitImage">
+                            <picture class="Lazy IsLoaded"><img src="https://prod-takelessons.netdna-ssl.com/images/public/landing/howItWorks/search.jpg" alt="Search" class="ImageSlideIn" style="display: block;"></picture>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="TextColumn">
+                        <h4 class="Small">Search for a teacher</h4>
+                        <h5 class="Small LightWeight">
+                            Compare hundreds of teachers based on the criteria that matter to you,
+                            including background checks, age and experience.
+                        </h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="Container Reverse  margin-top-15">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-6">
+                    <div class="ImageColumn ScheduleYourLessons">
+                        <div class="Image FitImage">
+                            <picture class="Lazy IsLoaded"><img src="https://prod-takelessons.netdna-ssl.com/images/public/landing/howItWorks/getStarted.jpg" alt="GetStarted" class="ImageSlideIn" style="display: block;"></picture>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="TextColumn">
+                        <h4 class="Small">Schedule your lessons</h4>
+                        <h5 class="Small LightWeight">
+                            When you've found the perfect match, schedule your lessons online
+                            using the teacher's real-time availability.
+                        </h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="Container  margin-top-15">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-6">
+                    <div class="ImageColumn ConnectTeacher">
+                        <div class="Image FitImage">
+                            <picture class="Lazy IsLoaded"><img src="https://prod-takelessons.netdna-ssl.com/images/public/landing/howItWorks/browseListings.jpg" alt="BrowseListings" class="ImageSlideIn" style="display: block;"></picture>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="TextColumn">
+                        <h4 class="Small">Connect with your teacher</h4>
+                        <h5 class="Small LightWeight">
+                            Your teacher will welcome you with a personalized curriculum to meet
+                            your specific goals and you'll be able to manage your entire schedule
+                            through our free online account.
+                        </h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="PageDesc">
+        <h3 class="LightWeight Large">Connect Locally or Online</h3>
+    </div>
+    <div class="Container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-6">
+                    <div class="Content Local">
+                        <div class="ImageColumn">
+                            <div class="Image FitImage">
+                                <picture class="Lazy IsLoaded"><img src="https://prod-takelessons.netdna-ssl.com/images/public/landing/onlineLocal/local.png" alt="Local" class="ImageSlideIn" style="display: block;"></picture>
+                            </div>
+                        </div>
+
+                        <div class="TextColumn">
+                            <h4 class="Small"><a href="/local">Local Lessons</a></h4>
+                            <h5 class="Small LightWeight">
+                                No matter where you live, chances are we can introduce you to an
+                                amazing teacher in your neighborhood. You can take lessons in the
+                                privacy of your own home or at your teacher's location.
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="Content Reverse Online">
+                        <div class="ImageColumn">
+                            <div class="Image FitImage">
+                                <picture class="Lazy IsLoaded"><img src="https://prod-takelessons.netdna-ssl.com/images/public/landing/onlineLocal/online.png" alt="Online" class="ImageSlideIn" style="display: block;"></picture>
+                            </div>
+                        </div>
+                        <div class="TextColumn">
+                            <h4 class="Small"><a href="/online">Online Lessons</a></h4>
+                            <h5 class="Small LightWeight">
+                                What if your dream teacher is on the other side of the country? No
+                                problem. You can meet with your teacher online using a webcam on
+                                your computer.
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+</section>
+
+
+
+<section id="TeacherCTA" class="Landing">
+    <div class="Container">
+        <div class="PageDesc">
+            <h3 class="Large NormalWeight">Are You a Teacher?</h3>
+            <h4 class="ExtraSmall LightWeight">
+                Find out how TakeLessons can help you grow and manage your business
+            </h4>
+        </div>
+        <div>
+            <a class="Button Green" href="/teachers">Learn More</a>
+        </div>
+    </div>
+</section>
