--- a/Shikhai/Views/Shared/_TopMenu.cshtml
+++ b/Shikhai/Views/Shared/_TopMenu.cshtml
@@ -39,7 +39,7 @@
                            </li>
                         }
 
-                        <li><a href='#'>ABOUT</a></li>
+                        <li><a href='/Home/About'>ABOUT</a></li>
                         <li>
                             <a href='#'>PRODUCTS</a>
                             <ul>
@@ -59,10 +59,8 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href='#'>Hot Deals</a></li>
-                        <li><a href='/Medicines/Create'>Medicine</a></li>
-                        <li><a href='/BazarLists/Create'>Bazar List</a></li>
-                        <li><a href='#'>CONTACT</a></li>
+
+                        <li><a href='/Home/Contact'>CONTACT</a></li>
 
                         @Html.Partial("_LoginPartial")
                       
