--- a/Shikhai/Views/Shared/_SideMenuLeftAdmin.cshtml
+++ b/Shikhai/Views/Shared/_SideMenuLeftAdmin.cshtml
@@ -167,9 +167,9 @@
 
                     </li>
                     <li class="nav-item  ">
-                        <a href="@Url.Action("Index", "Doctors")">
+                        <a href="@Url.Action("Index", "Teachers")">
                             <i class="icon-check"></i>
-                            <span class="title">Doctors</span>
+                            <span class="title">Teachers</span>
                             <span class="badge badge-success">6</span>
                         </a>
                     </li>
@@ -336,9 +336,9 @@
                 </a>
                 <ul class="sub-menu">
                     <li class="nav-item">
-                        <a href="@Url.Action("Index", "DoctorWorkingAreas")">
+                        <a href="@Url.Action("Index", "TeacherWorkingAreas")">
                             <i class="icon-camera"></i>
-                            <span class="title">Doctor Working Areas</span>
+                            <span class="title">Teacher Working Areas</span>
                             <span class="badge badge-success">0</span>
                         </a>
                     </li>
