--- a/Shikhai/Views/Teachers/Index.cshtml
+++ b/Shikhai/Views/Teachers/Index.cshtml
@@ -6,6 +6,14 @@
 }
 <link href="~/Content/teacher.css" rel="stylesheet" />
 
+<div class="jumbotron">
+    <div class="container">
+        <h1>Teach what you love</h1>
+        <p>Set your prices and teach on your own time.</p>
+        <p><a class="LandingButton PartnerSignUp_Trigger"  href="/Account/RegisterTeacher">Get Started</a></p>
+        
+    </div>
+</div>
 
 
 <div class="row" style="background-color:white;">
@@ -14,8 +22,8 @@
             <div class="portlet-title">
                 <div class="caption">
                     <i class=" icon-layers font-green"></i>
-                    <span class="caption-subject font-green bold uppercase">Simple</span>
-                    <div class="caption-desc font-grey-cascade"> Default list element style. Activate by adding <pre class="mt-code">.list-simple</pre> class to the <pre class="mt-code">ul</pre> element. </div>
+                    <span class="caption-subject font-green bold uppercase">Local Lessons</span>
+                    <div class="caption-desc font-grey-cascade"> With hundreds of subjects, the possibilities are endless. Here are a few of our most popular.</div>
                 </div>
             </div>
             <div class="portlet-body">
@@ -95,8 +103,8 @@
             <div class="portlet-title">
                 <div class="caption">
                     <i class=" icon-layers font-green"></i>
-                    <span class="caption-subject font-green bold uppercase">Simple</span>
-                    <div class="caption-desc font-grey-cascade"> Default list element style. Activate by adding <pre class="mt-code">.list-simple</pre> class to the <pre class="mt-code">ul</pre> element. </div>
+                    <span class="caption-subject font-green bold uppercase">Online Lessons</span>
+                    <div class="caption-desc font-grey-cascade"> Expand your reach by teaching online. Check out some our top subjects for online lessons.</div>
                 </div>
             </div>
             <div class="portlet-body">
