--- a/Shikhai/Content/teacher.css
+++ b/Shikhai/Content/teacher.css
@@ -59,7 +59,6 @@ a {
     display: inline-block;
 
     text-decoration: none;
-    background: rgba(0,0,0,0.5);
     padding: .5rem;
     transition: .6s background;
 }
@@ -228,7 +227,6 @@ section.Landing.WaveBackground {
     }
 
 section.Landing.Gradient {
-    background: #ffffff;
     background: #ffffff;
     background: -moz-linear-gradient(top, #ffffff, #f6f7f9);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffffff), color-stop(1, #f6f7f9));
@@ -1391,4 +1389,19 @@ section.LocationsAndServices.OneColumn ul > li {
 
 section.LocationsAndServices ul > li {
     padding: 0 20px
+}
+
+
+
+
+/*jumbotron*/
+
+.jumbotron {
+    background: url(https://s3-us-west-2.amazonaws.com/consultjeremy.com/backgrounds/about-bg.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-height: 600px;
+    color: #ffffff;
 }
