--- a/Shikhai/Views/Shared/_LayoutAdmin.cshtml
+++ b/Shikhai/Views/Shared/_LayoutAdmin.cshtml
@@ -4,57 +4,66 @@
     <title>@ViewBag.Title - Shikhai</title>
     @Html.Partial("_LayoutHead")
 </head>
-<body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white">  
-            <div class="page-wrapper">
-                @Html.Partial("_TopMenuAdmin")
-                <div class="clearfix"> </div>
-                <div class="page-container">
-                    <!-- BEGIN SIDEBAR -->
-                    <div class="page-sidebar-wrapper">
-                        @Html.Partial("_SideMenuLeftAdmin")
-                    </div>
-                    <div class="page-content-wrapper">
-                        <div class="page-content">
-                            @Html.Partial("_SideMenuRightAdmin")
-                           
-                            
-                            <div class="row">
-                                @RenderBody()
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                    </div>
-                    <a href="javascript:;" class="page-quick-sidebar-toggler">
-                        <i class="icon-login"></i>
-                    </a>                    
-                    @Html.Partial("_SideMenuRightSideBar")
+<body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white demo">
+
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+
+    </div>
+    <div id="content">
+        <div class="page-wrapper">
+            @Html.Partial("_TopMenuAdmin")
+            <div class="clearfix"> </div>
+            <div class="page-container">
+                <!-- BEGIN SIDEBAR -->
+                <div class="page-sidebar-wrapper">
+                    @Html.Partial("_SideMenuLeftAdmin")
                 </div>
-                <div class="page-footer">
-                    <div class="page-footer-inner">
-                        <footer class="main-footer">
-                            <div class="pull-right hidden-xs">
-                                <b>Shikhai</b> Your Family Partner
-                            </div>
-                            <strong>Copyright &copy; 2017-2018 <a href="#">Bangladesh</a>.</strong> All rights
-                            reserved.
-                        </footer>
+                <div class="page-content-wrapper">
+                    <div class="page-content">
+                        @Html.Partial("_SideMenuRightAdmin")
+
+
+                        <div class="row">
+                            @RenderBody()
+                        </div>
+                        <div class="clearfix"></div>
                     </div>
-                    <div class="scroll-to-top">
-                        <i class="icon-arrow-up"></i>
-                    </div>
+                </div>
+                <a href="javascript:;" class="page-quick-sidebar-toggler">
+                    <i class="icon-login"></i>
+                </a>
+                @Html.Partial("_SideMenuRightSideBar")
+            </div>
+            <div class="page-footer">
+                <div class="page-footer-inner">
+                    <footer class="main-footer">
+                        <div class="pull-right hidden-xs">
+                            <b>Shikhai</b> Your Family Partner
+                        </div>
+                        <strong>Copyright &copy; 2017-2018 <a href="#">Bangladesh</a>.</strong> All rights
+                        reserved.
+                    </footer>
+                </div>
+                <div class="scroll-to-top">
+                    <i class="icon-arrow-up"></i>
                 </div>
             </div>
+        </div>
+    </div>
  
+
     @Html.Partial("_LayoutFooter")
- 
-<script>
-    $(document).ready(function()
-    {
-        $('#clickmewow').click(function()
-        {
-            $('#radio1003').attr('checked', 'checked');
-        });
-    })
-</script>
+
+    <script>
+        $(document).ready(function () {
+            $('#clickmewow').click(function () {
+                $('#radio1003').attr('checked', 'checked');
+            });
+        })
+    </script>
 </body>
 </html>
