--- a/Shikhai/Views/Teachers/Delete.cshtml
+++ b/Shikhai/Views/Teachers/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Shikhai.Models.Doctor
+﻿@model Shikhai.Models.Teacher
 
 @{
     ViewBag.Title = "Delete";
@@ -10,7 +10,7 @@
 <h3>Are you sure you want to delete this?</h3>
 
 <div>
-    <h4>Doctor</h4>
+    <h4>Teacher</h4>
     <hr />
     <table class="tabledisplay">
         <thead>
