--- a/Shikhai/Views/Teachers/Details.cshtml
+++ b/Shikhai/Views/Teachers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Shikhai.Models.Doctor
+﻿@model Shikhai.Models.Teacher
 
 @{
     ViewBag.Title = "Details";
@@ -8,7 +8,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Doctor</h4>
+    <h4>Teacher</h4>
     <hr />
     <table class="tabledisplay">
         <thead>
