--- a/Shikhai/Views/Teachers/Edit.cshtml
+++ b/Shikhai/Views/Teachers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Shikhai.Models.Doctor
+﻿@model Shikhai.Models.Teacher
 
 @{
     ViewBag.Title = "Edit";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Doctor</h4>
+    <h4>Teacher</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Id)
@@ -164,7 +164,7 @@
                             $("#imgSrc").css("display", "none");
                             var files = $("#fileinput")[0].files;
 
-                            var url = '/doctors/Upload';
+                            var url = '/Teachers/Upload';
 
                             upload(files, url, imagepath, rawimagepath);
                         }
