--- a/Shikhai/Views/Shared/_LayoutHead.cshtml
+++ b/Shikhai/Views/Shared/_LayoutHead.cshtml
@@ -164,6 +164,7 @@
 </script>
 
 
+@*date time*@
 <link href="~/Content/metronic/uxsolutions-bootstrap-datepicker-v1.7.1-12/css/bootstrap-datepicker3.standalone.css" rel="stylesheet" />
 <link href="~/Content/metronic/uxsolutions-bootstrap-datepicker-v1.7.1-12/css/bootstrap-datepicker3.css" rel="stylesheet" />
 <script src="~/Content/metronic/uxsolutions-bootstrap-datepicker-v1.7.1-12/js/bootstrap-datepicker.js"></script>
@@ -177,3 +178,10 @@
 <link href="~/Content/loader.css" rel="stylesheet" />
 <script src="~/Scripts/modernizr-2.6.2.min.js"></script>
 
+
+<style>
+    .form-group.required .control-label:after {
+        content: "*";
+        color: red;
+    }
+</style>
