--- a/Shikhai/Views/Shared/_TopMenu.cshtml
+++ b/Shikhai/Views/Shared/_TopMenu.cshtml
@@ -1,24 +1,4 @@
-﻿<div class="row">
-    @*<div class="col-md-2">
-        <div class="logo"><a href="/Home"> <img alt="logo" src="~/Content/images/logo.png" style="max-height:100px;max-width:110px;" /> </a></div>
-    </div>
-    <div class="col-md-6">
-        <form action="#" id="headersearch" role="search">
-            <input alt="Search" id="keywords" name="q" placeholder="Enter your search" size="40" type="text" style="max-width: 340px; ">
-            <button class="ss-search" id="submitquery" name="sa" type="submit">
-                <span class="hide">search</span>
-            </button>
-        </form>
-    </div>*@
-
-
-    @*<div class="col-md-2">
-        @Html.Partial("_LoginPartial")
-    </div>*@
-</div>
-
-
-<div class="menu-banner">
+﻿<div class="menu-banner">
     <div class="menubar">
         <div class="col-md-12">
             <header style="z-index:9999;">
