--- a/Shikhai/Views/Home/Index.cshtml
+++ b/Shikhai/Views/Home/Index.cshtml
@@ -383,7 +383,7 @@
         <div class="PageDesc">
             <h3 class="Large NormalWeight">Are You a Teacher?</h3>
             <h4 class="ExtraSmall LightWeight">
-                Find out how TakeLessons can help you grow and manage your business
+                Find out how Gradexl can help you grow and manage your business
             </h4>
         </div>
         <div>
