--- a/Shikhai/Views/Teachers/Index.cshtml
+++ b/Shikhai/Views/Teachers/Index.cshtml
@@ -214,7 +214,7 @@
 
                 <p>
                     <strong>Online teaching made easy</strong>
-                    TakeLessons Classroom provides the easiest way to conduct professional online video lessons, no hassles or downloads
+                    Gradexl Classroom provides the easiest way to conduct professional online video lessons, no hassles or downloads
                 </p>
             </div><div class="PartnerPublic_Location_Image">
                 <img src="https://prod-takelessons.netdna-ssl.com/images/public/teachers/tch-lp-online.jpg" alt="Tch-lp-online">
@@ -230,11 +230,11 @@
 
         <div class="PartnerPublic_FAQ_Entry">
             <div class="PartnerPublic_FAQ_Entry_Question">
-                How do I join TakeLessons?
+                How do I join Gradexl?
             </div>
             <div class="PartnerPublic_FAQ_Entry_Answer">
 
-                The process of becoming a TakeLessons teaching partner is simple. All you need to do is fill out your profile details
+                The process of becoming a Gradexl teaching partner is simple. All you need to do is fill out your profile details
                 and experience, complete a background check, and agree to our independent contractor terms. We are actively seeking
                 local and online teachers in every city in the United States and offer flexible online teaching options for teachers
                 working internationally.
@@ -245,8 +245,8 @@
             </div>
             <div class="PartnerPublic_FAQ_Entry_Answer">
 
-                Listing your profile to book new students through TakeLessons is completely free and unlike other websites,
-                you never have to buy or bid for leads or students. TakeLessons assesses an administrative fee only when
+                Listing your profile to book new students through Gradexl is completely free and unlike other websites,
+                you never have to buy or bid for leads or students. Gradexl assesses an administrative fee only when
                 a fully-paid student is delivered to you (to cover marketing costs, student payment processing, and more).
                 Once you start teaching lessons, you’ll earn up to 90% of the total lesson price per student. You have 100%
                 control over your earnings at all times.
@@ -257,7 +257,7 @@
             </div>
             <div class="PartnerPublic_FAQ_Entry_Answer">
 
-                Thousands of new students come to TakeLessons every day looking for the perfect private instructor to help them achieve
+                Thousands of new students come to Gradexl every day looking for the perfect private instructor to help them achieve
                 their goals. Students use our search filters to find teachers with awesome profile photos, detailed lesson descriptions,
                 reviews, and the Background Checked badge (very popular with parents). We provide all the tools you need to make your
                 way to the top of our search results where your profile will get the most views and bookings.
