--- a/Shikhai/Views/Shared/_TopMenuAdmin.cshtml
+++ b/Shikhai/Views/Shared/_TopMenuAdmin.cshtml
@@ -26,7 +26,7 @@
         <div class="page-header-inner ">
             <!-- BEGIN LOGO -->
             <div class="page-logo">
-                <a href="/">
+                <a href="/" target="_blank">
                     <img src="~/Content/images/logo.png" alt="logo" class="logo-default" style="height: 20px; width: 86px;" />
 
                 </a>
