--- a/Shikhai/Views/Products/Index.cshtml
+++ b/Shikhai/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Shikhai.Models.OrderPaymentMethod>
+﻿@model IEnumerable<Shikhai.Models.Product>
 
 @{
     ViewBag.Title = "Index";
@@ -25,11 +25,15 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Instructions)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.InstructionsImageUrl)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsBook)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsStationary)
+            </th>
+
             <th>
                 @Html.DisplayNameFor(model => model.Published)
             </th>
@@ -43,15 +47,12 @@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id })
-
-                    @*| @Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
+                    | @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Instructions)
-                </td>
+
                 <td>
 
                     @{
@@ -62,6 +63,12 @@
                             </a>
                         }
                     }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsBook)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IsStationary)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Published)
