--- a/Shikhai/Views/Shared/_TopMenu.cshtml
+++ b/Shikhai/Views/Shared/_TopMenu.cshtml
@@ -11,11 +11,22 @@
 
                         @if (Request.IsAuthenticated && User.IsInRole("Admin"))
                         {
-                           <li>
-                               <a href='/Dashboard/Index'>Admin Panel</a>
-                           </li>
+                            <li>
+                                <a href='/Dashboard/Index'>Admin Panel</a>
+                            </li>
                         }
-
+                        @if (Request.IsAuthenticated && User.IsInRole("Teacher"))
+                        {
+                            <li>
+                                <a href='/Teachers/Dashboard'>Teacher Panel</a>
+                            </li>
+                        }
+                        @if (Request.IsAuthenticated && User.IsInRole("Student"))
+                        {
+                            <li>
+                                <a href='/Students/Dashboard'>Student Panel</a>
+                            </li>
+                        }
                         <li><a href='/Home/About'>ABOUT</a></li>
                         <li>
                             <a href='#'>PRODUCTS</a>
@@ -40,7 +51,7 @@
                         <li><a href='/Home/Contact'>CONTACT</a></li>
 
                         @Html.Partial("_LoginPartial")
-                      
+
                     </ul>
                   
                 </nav>
