--- a/Shikhai/Views/Books/Delete.cshtml
+++ b/Shikhai/Views/Books/Delete.cshtml
@@ -1,12 +1,13 @@
 ﻿@model Shikhai.Models.Product
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Products</h4>
     <hr />
@@ -26,6 +27,7 @@
         </dt>
 
         <dd>
+
             @{
                 if (!string.IsNullOrEmpty(Model.InstructionsImageUrl))
                 {
@@ -35,8 +37,9 @@
                     </a>
                 }
             }
+
         </dd>
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.IsBook)
         </dt>
 
@@ -46,10 +49,10 @@
         <dt>
             @Html.DisplayNameFor(model => model.IsStationary)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.IsStationary)
-        </dd>
+        </dd>*@
+
         <dt>
             @Html.DisplayNameFor(model => model.CreatedOnUtc)
         </dt>
@@ -66,6 +69,13 @@
             @Html.DisplayFor(model => model.UpdatedOnUtc)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ShowOnHomePage)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ShowOnHomePage)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Published)
         </dt>
 
@@ -74,8 +84,13 @@
         </dd>
 
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
