--- a/Shikhai/Views/Categories/Create.cshtml
+++ b/Shikhai/Views/Categories/Create.cshtml
@@ -83,13 +83,13 @@
             <div id="menu2" class="tab-pane fade">
 
 
-                <div class="form-group">
+                @*<div class="form-group">
                     @Html.LabelFor(model => model.DisplayOrder, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.DisplayOrder, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.DisplayOrder, "", new { @class = "text-danger" })
                     </div>
-                </div>
+                </div>*@
 
 
                 <div class="form-group">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                @*<div class="form-group">
                     @Html.LabelFor(model => model.IncludeInTopMenu, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         <div class="checkbox">
@@ -120,10 +120,11 @@
                             @Html.ValidationMessageFor(model => model.IncludeInTopMenu, "", new { @class = "text-danger" })
                         </div>
                     </div>
-                </div>
+                </div>*@
 
             </div>
             <div id="menu3" class="tab-pane fade">
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.Published, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
