--- a/Shikhai/Views/Stationaries/Details.cshtml
+++ b/Shikhai/Views/Stationaries/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Shikhai.Models.Product
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Products</h4>
     <hr />
@@ -27,7 +26,6 @@
         </dt>
 
         <dd>
-
             @{
                 if (!string.IsNullOrEmpty(Model.InstructionsImageUrl))
                 {
@@ -37,9 +35,8 @@
                     </a>
                 }
             }
-
         </dd>
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.IsBook)
         </dt>
 
@@ -49,6 +46,10 @@
         <dt>
             @Html.DisplayNameFor(model => model.IsStationary)
         </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsStationary)
+        </dd>*@
         <dt>
             @Html.DisplayNameFor(model => model.CreatedOnUtc)
         </dt>
@@ -64,9 +65,14 @@
         <dd>
             @Html.DisplayFor(model => model.UpdatedOnUtc)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ShowOnHomePage)
+        </dt>
+
         <dd>
-            @Html.DisplayFor(model => model.IsStationary)
+            @Html.DisplayFor(model => model.ShowOnHomePage)
         </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Published)
         </dt>
@@ -76,13 +82,8 @@
         </dd>
 
     </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
 </div>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
