--- a/Shikhai/Views/Home/Index.cshtml
+++ b/Shikhai/Views/Home/Index.cshtml
@@ -31,9 +31,11 @@
 </div>
 
 
-@*Portfolio*@
+@*Categories*@
 @{ Html.RenderAction("Portfolio", "Catalog"); }
 
+@*Products*@
+@{ Html.RenderAction("Products", "Catalog"); }
 
 @*How it Works*@
 
