--- a/Shikhai/Views/Shared/_SideMenuLeftAdmin.cshtml
+++ b/Shikhai/Views/Shared/_SideMenuLeftAdmin.cshtml
@@ -85,13 +85,19 @@
                         </a>
                     </li>
                     <li class="nav-item  ">
-                        <a href="@Url.Action("Index", "Products")">
+                        <a href="@Url.Action("Index", "Stationaries")">
                             <i class="icon-graph"></i>
-                            <span class="title">Products</span>
+                            <span class="title">Stationaries</span>
                             <span class="badge badge-success">6</span>
                         </a>
                     </li>
-
+                    <li class="nav-item  ">
+                        <a href="@Url.Action("Index", "Books")">
+                            <i class="icon-graph"></i>
+                            <span class="title">Books</span>
+                            <span class="badge badge-success">6</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
 
