--- a/Shikhai/Views/UsersAdmin/Edit.cshtml
+++ b/Shikhai/Views/UsersAdmin/Edit.cshtml
@@ -4,15 +4,7 @@
 @{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
-
-
-
-
-
-
-
-<h2>Edit.</h2>
-
+<h2>Edit</h2>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
